# reports-service

./: .env.example  ARCHETYPE_GENERATION_REPORT.md  GETTING_STARTED.md  PROYECTO_COMPLETADO.md  README.md  docker-compose.yml
api-reportes/: .coverage_threshold  .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml  pytest.ini  requirements.txt
api-reportes/src/: __init__.py
api-reportes/src/application/dto/: __init__.py  api_dtos.py
api-reportes/src/application/service_aggregators/: external_service_aggregator.py
api-reportes/src/application/use_cases/: __init__.py  use_cases.py
api-reportes/src/domain/models/: __init__.py  incident.py  maintenance.py  operational_kpi.py  vehicle_snapshot.py
api-reportes/src/domain/repositories/: __init__.py  base.py
api-reportes/src/domain/services/: __init__.py  domain_services.py
api-reportes/src/infrastructure/config/: __init__.py  grpc_config.py  settings.py
api-reportes/src/infrastructure/grpc_clients/: grpc_clients.py
api-reportes/src/infrastructure/observability/: __init__.py  logger_config.py  prometheus_metrics.py
api-reportes/src/infrastructure/persistence/: __init__.py  mongodb_connection.py  repository_impl.py
api-reportes/src/presentation/: main.py
api-reportes/src/presentation/middleware/: circuit_breaker_middleware.py  error_handler.py  request_validation.py
api-reportes/src/presentation/routes/: __init__.py  availability_routes.py  health_routes.py  incident_routes.py  maintenance_routes.py  traceability_routes.py
api-reportes/tests/integration/: test_end_to_end_availability.py
graficas-estadisticas/: .dockerignore  .env.example  Dockerfile  README.md  __init__.py  pyproject.toml  pytest.ini  requirements.txt
graficas-estadisticas/src/: __init__.py  middleware.py
graficas-estadisticas/src/presentation/: main.py
graficas-estadisticas/templates/: report_template.html
graficas-estadisticas/tests/unit/: __init__.py
(+48 files in other folders)
