[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "graficas-estadisticas"
version = "1.0.0"
description = "Microservicio de Gráficas y Estadísticas - Generación de reportes PDF"
requires-python = ">=3.12"

[tool.pytest.ini_options]
minversion = "7.4"
addopts = "--strict-markers -v --cov=src --cov-report=html"
testpaths = ["tests"]
asyncio_mode = "auto"
